--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
 <body>
 
   <!-- Navegador -->
-  <nav class="navbar bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="./multimedia/img/gemini.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-        GEMINI
-      </a>
+      <a class="navbar-brand" href="#">GEMINI</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link" href="pages/programas.html">Products</a>
+          <a class="nav-link" href="pages/profesores.html">Contact</a>
+        </div>
+      </div>
     </div>
-  </nav>
+</nav>
   <!-- navegador-  --> 
 
   <!-- header -->
   <header>
     <div class="header-home">
-      <h1 ><img src="./multimedia/img/icono_insti.jpg" alt=""></h1>
-      <P>Estilo es usar lo que te hace sentir bien!</P>
+      <h1 ><img src="./multimedia/img/gemini.png" alt=""></h1>
+      <p>Estilo es usar lo que te hace sentir bien!</p> 
+      
     </div>
   </header>
   <!-- header -->
