--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header>
     <div class="header-home">
       <h1 ><img src="./multimedia/img/gemini.png" alt=""></h1>
-      <p>Estilo es usar lo que te hace sentir bien!</p> 
+      <p>Estilo es usar lo ñadir al carritohace sentir bien!</p> 
       
     </div>
   </header>
@@ -46,71 +46,69 @@
   <!-- mian -->
     <main>
       <section class="container-heels">
-      <div class="card" style="width: 18rem;">
-        <img src="./multimedia/img/heels1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Red Heel</p>
-          <p class="card-text">$ 25000</p>
+        <div class="card" style="width: 18rem;">
+          <img src="./multimedia/img/heels1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sara</h5>
+            <p class="card-text">Ecocuero</p>
+            <a href="#" class="btn btn-primary">Añadir al carrito</a>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-      <img src="./multimedia/img/heels2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Red Heel</p>
-        <p class="card-text">$ 25000</p>
-      </div>
-    </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="./multimedia/img/heels3.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <p class="card-text">Red Heel</p>
-      <p class="card-text">$ 25000</p>
-    </div>
-  </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="./multimedia/img/heels4.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <p class="card-text">Red Heel</p>
-      <p class="card-text">$ 25000</p>
-    </div>
-  </div>
+        <div class="card" style="width: 18rem;">
+          <img src="./multimedia/img/heels2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sofia</h5>
+            <p class="card-text">Ecocuero</p>
+            <a href="#" class="btn btn-primary">Añadir al carrito</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="./multimedia/img/heels3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Selena</h5>
+            <p class="card-text">Ecocuero</p>
+            <a href="#" class="btn btn-primary">Añadir al carrito</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="./multimedia/img/heels4.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Siena</h5>
+            <p class="card-text">Ecocuero</p>
+            <a href="#" class="btn btn-primary">Añadir al carrito</a>
+          </div>
+        </div>
   </section> 
 
   <section class="container-clothing">
     <div class="card" style="width: 18rem;">
       <img src="./multimedia/img/dress1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">black dress</p>
-        <p class="card-text">$ 18600</p>
+        <h5 class="card-title">Mirna</h5>
+        <a href="#" class="btn btn-primary">Añadir al carrito</a>
       </div>
     </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="./multimedia/img/dress2.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <p class="card-text">black dress</p>
-      <p class="card-text">$ 18600</p>
-    </div>
-  </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="./multimedia/img/dress3.jpg" class="card-img-top" alt="...">
+    <div class="card" style="width: 18rem;">
+      <img src="./multimedia/img/dress2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">black dress</p>
-        <p class="card-text">$ 18600</p>
+        <h5 class="card-title">Miel</h5>
+        <a href="#" class="btn btn-primary">Añadir al carrito</a>
+      </div>
     </div>
-  </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="./multimedia/img/vestido.jpg" class="card-img-top" alt="...">
+    <div class="card" style="width: 18rem;">
+      <img src="./multimedia/img/dress3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">Red Heel</p>
-        <p class="card-text">$ 18600</p>
+        <h5 class="card-title">Muna</h5>
+        <a href="#" class="btn btn-primary">Añadir al carrito</a>
+      </div>
     </div>
-  </div>
+    <div class="card" style="width: 18rem;">
+      <img src="./multimedia/img/vestido.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Marie</h5>
+        <a href="#" class="btn btn-primary">Añadir al carrito</a>
+      </div>
+    </div>
   </section> 
     </main>
     <!-- main -->
