se agregan pages

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="pages/programas.html">Products</a>
           <a class="nav-link" href="pages/profesores.html">Contact</a>
+          <a class="nav-link" href="pages/programas.html">Cart</a>
         </div>
       </div>
     </div>
@@ -50,7 +51,7 @@
           <img src="./multimedia/img/heels1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Sara</h5>
-            <p class="card-text">Ecocuero</p>
+            <p  id = "product-sara" class="card-text">Ecocuero</p>
             <a href="#" class="btn btn-primary">Añadir al carrito</a>
           </div>
         </div>
