se agregan pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <!-- mian -->
     <main>
-      <section class="container-heels">
+      <section class="container-new-heels">
         <div class="card" style="width: 18rem;">
           <img src="./multimedia/img/heels1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -81,7 +81,7 @@
         </div>
   </section> 
 
-  <section class="container-clothing">
+  <section class="container-new-clothing">
     <div class="card" style="width: 18rem;">
       <img src="./multimedia/img/dress1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
