--- a/pages/products.html
+++ b/pages/products.html
@@ -8,7 +8,7 @@
      <!-- link a estilos boostrap -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-     <link rel="stylesheet" href="./css/main.css">
+     <link rel="stylesheet" href="../css/main.css">
 
 
     <title>GEMINI - Indumentaria Femenina</title>
@@ -33,6 +33,10 @@
     </div>
 </nav>
   <!-- navegador-  --> 
+
+  <main>
+    <div id="mainProducts"></div>
+  </main>
 
 
 
@@ -105,7 +109,7 @@
 
 
     <!-- Link a JS -->
-    <script src="./JS/index.js"></script>
+    <script src="../JS/index.js"></script>
     <!-- Link a script de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
