--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="card-body">
             <h5 class="card-title">Sara</h5>
             <p  id = "product-sara" class="card-text">Ecocuero</p>
-            <a href="#" class="btn btn-primary">Añadir al carrito</a>
+            <a href="./pages/cart.html" id="prodSara" class="btn btn-primary">Añadir al carrito</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -60,7 +60,7 @@
           <div class="card-body">
             <h5 class="card-title">Sofia</h5>
             <p class="card-text">Ecocuero</p>
-            <a href="#" class="btn btn-primary">Añadir al carrito</a>
+            <a href="./pages/cart.html" id="prodSofia" class="btn btn-primary">Añadir al carrito</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -68,7 +68,7 @@
           <div class="card-body">
             <h5 class="card-title">Selena</h5>
             <p class="card-text">Ecocuero</p>
-            <a href="#" class="btn btn-primary">Añadir al carrito</a>
+            <a href="./pages/cart.html" id="prodSelena" class="btn btn-primary">Añadir al carrito</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -76,7 +76,7 @@
           <div class="card-body">
             <h5 class="card-title">Siena</h5>
             <p class="card-text">Ecocuero</p>
-            <a href="#" class="btn btn-primary">Añadir al carrito</a>
+            <a href="./pages/cart.html" id="prodSiena" class="btn btn-primary">Añadir al carrito</a>
           </div>
         </div>
   </section> 
@@ -86,28 +86,28 @@
       <img src="./multimedia/img/dress1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Mirna</h5>
-        <a href="#" class="btn btn-primary">Añadir al carrito</a>
+        <a href="./pages/cart.html" id="prodMirna" class="btn btn-primary">Añadir al carrito</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
       <img src="./multimedia/img/dress2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Miel</h5>
-        <a href="#" class="btn btn-primary">Añadir al carrito</a>
+        <a href="./pages/cart.html" id="prodMiel" class="btn btn-primary">Añadir al carrito</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
       <img src="./multimedia/img/dress3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Muna</h5>
-        <a href="#" class="btn btn-primary">Añadir al carrito</a>
+        <a href="./pages/cart.html" id="prodMuna" class="btn btn-primary">Añadir al carrito</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
       <img src="./multimedia/img/vestido.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Marie</h5>
-        <a href="#" class="btn btn-primary">Añadir al carrito</a>
+        <a href="./pages/cart.html" id="prodMarie" class="btn btn-primary">Añadir al carrito</a>
       </div>
     </div>
   </section> 
