--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,15 +8,15 @@
      <!-- link a estilos boostrap -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-     <link rel="stylesheet" href="./css/main.css">
+     <link rel="stylesheet" href="../css/main.css">
 
 
     <title>GEMINI - Indumentaria Femenina</title>
 </head>
 <body>
 
-  <!-- Navegador -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- Navegador -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">GEMINI</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,13 +31,37 @@
         </div>
       </div>
     </div>
-</nav>
-  <!-- navegador-  --> 
+    </nav>
+    <!-- navegador-  -->
+  
+    <!-- header -->
+    <header>
+      <div class="header-contact">
+        <h1 ><img src="../multimedia/img/gemini.png" alt=""></h1>
+        <p>Estilo es usar lo ñadir al carritohace sentir bien!</p> 
+        
+      </div>
+    </header>
+    <!-- header -->
+
+    <!-- mian -->
+    <main>
+      <div>
+      <form id="formulario">
+        <input type="text"/>
+        <input type="text"/>
+        <input type="number"/>
+        <input type="text"/>
+        <input type="submit" value="Enviar"/>
+    </form>
+    </div>
+    </main>
+    <!-- main -->
 
 
 
-<!-- Footer -->
-<footer class="text-center text-white" style="background-color: #f1f1f1;">
+    <!-- Footer -->
+    <footer class="text-center text-white" style="background-color: #f1f1f1;">
     <!-- Grid container -->
     <div class="container pt-4">
       <!-- Section: Social media -->
@@ -97,13 +121,13 @@
       <a class="text-dark" href="https://mdbootstrap.com/">:)</a>
     </div>
     <!-- Copyright -->
-  </footer>
- <!-- Footer -->
+    </footer>
+    <!-- Footer -->
 
 
 
     <!-- Link a JS -->
-    <script src="./JS/index.js"></script>
+    <script src="../JS/index.js"></script>
     <!-- Link a script de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
